# mcp-time-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  smithery.yaml
src/: __init__.py  time_server.py
